--- a/views/home.html
+++ b/views/home.html
@@ -27,6 +27,22 @@
 <body>
     <h1>Welcome to the workout tracker</h1>
 
+    <main class="container">
+        <div class="card">
+            <div class="card-header">
+                <h2>Sunday</h2>
+            </div>
+            <ul class="list-group list-group-flush ml-4">
+                <li class="list-group-item">Cras justo odio</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+            <div class="card-body text-center">
+                <a href="#" class="btn btn-primary rounded-circle">➕</a>
+            </div>
+        </div>
+    </main>
+
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
