--- a/views/home.html
+++ b/views/home.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <h1>Welcome to the workout tracker</h1>
-
+<h1>test</h1>
     <main class="container">
         <div class="card">
             <div class="card-header">
