Made columns not reversed on mobile

--- a/views/home.html
+++ b/views/home.html
@@ -33,11 +33,11 @@
 </header>
 <main>
 
-    <div id="day-plans" class="d-flex flex-column-reverse flex-sm-row justify-content-around align-items-sm-start mt-5">
+    <div id="day-plans" class="d-flex flex-column flex-sm-row justify-content-around align-items-sm-start mt-5">
 
         <div class="card">
             <div class="card-header">
-                <h2>Sunday</h2>
+                <h2>Today</h2>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Curls</li>
@@ -46,39 +46,26 @@
             </ul>
             <div class="card-body text-center">
                 <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                   data-day="Sunday">➕</a>
+                   data-day="Today">➕</a>
             </div>
         </div>
 
         <div class="card">
             <div class="card-header">
-                <h2>Monday</h2>
+                <h2>Yesterday</h2>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Squats</li>
             </ul>
             <div class="card-body text-center">
                 <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                   data-day="Monday">➕</a>
+                   data-day="Yesterday">➕</a>
             </div>
         </div>
 
         <div class="card">
             <div class="card-header">
-                <h2>Tuesday</h2>
-            </div>
-            <ul class="list-group list-group-flush">
-
-            </ul>
-            <div class="card-body text-center">
-                <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                   data-day="Tuesday">➕</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card-header">
-                <h2>Wednesday</h2>
+                <h2>2 Days Ago</h2>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Military press</li>
@@ -87,39 +74,39 @@
             </ul>
             <div class="card-body text-center">
                 <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                   data-day="Wednesday">➕</a>
+                   data-day="2 Days Ago">➕</a>
             </div>
         </div>
 
         <div class="card">
             <div class="card-header">
-                <h2>Thursday</h2>
+                <h2>3 Days Ago</h2>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Jogging</li>
             </ul>
             <div class="card-body text-center">
                 <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                   data-day="Thursday">➕</a>
+                   data-day="3 Days Ago">➕</a>
             </div>
         </div>
 
         <div class="card">
             <div class="card-header">
-                <h2>Friday</h2>
+                <h2>4 Days Ago</h2>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Push ups</li>
             </ul>
             <div class="card-body text-center">
                 <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                   data-day="Friday">➕</a>
+                   data-day="4 Days Ago">➕</a>
             </div>
         </div>
 
         <div class="card">
             <div class="card-header">
-                <h2>Saturday</h2>
+                <h2>5 Days Ago</h2>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Lunges</li>
@@ -129,6 +116,19 @@
             <div class="card-body text-center">
                 <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
                     data-day="Saturday">➕</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2>6 Days Ago</h2>
+            </div>
+            <ul class="list-group list-group-flush">
+
+            </ul>
+            <div class="card-body text-center">
+                <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
+                   data-day="6 Days Ago">➕</a>
             </div>
         </div>
     </div>
