Created get all workouts db query. Pulled workout button options from the db. PP

--- a/views/home.html
+++ b/views/home.html
@@ -165,18 +165,21 @@
                     </div>
                     <hr>
                     <div id="workout-options">
-                        <button class="btn btn-secondary btn-sm">Bench press</button>
-                        <button class="btn btn-secondary btn-sm">Cleans</button>
-                        <button class="btn btn-secondary btn-sm">Curls</button>
-                        <button class="btn btn-secondary btn-sm">Jogging</button>
-                        <button class="btn btn-secondary btn-sm">Running</button>
-                        <button class="btn btn-secondary btn-sm">Rowing</button>
-                        <button class="btn btn-secondary btn-sm">Jogging</button>
-                        <button class="btn btn-secondary btn-sm">Military press</button>
-                        <button class="btn btn-secondary btn-sm">Sit-ups</button>
-                        <button class="btn btn-secondary btn-sm">Push-ups</button>
-                        <button class="btn btn-secondary btn-sm">Squats</button>
-                        <button class="btn btn-secondary btn-sm">Lunges</button>
+                        <repeat group="{{ @workouts }}" value="{{ @currWorkout }}">
+                            <button class="btn btn-secondary btn-sm">{{ @currWorkout['workout_name'] }}</button>
+                        </repeat>
+<!--                        <button class="btn btn-secondary btn-sm">Bench press</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Cleans</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Curls</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Jogging</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Running</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Rowing</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Jogging</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Military press</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Sit-ups</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Push-ups</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Squats</button>-->
+<!--                        <button class="btn btn-secondary btn-sm">Lunges</button>-->
 
                     </div>
                 </div>
