--- a/views/login.html
+++ b/views/login.html
@@ -12,22 +12,16 @@
  * File Associations:
  */
 -->
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Bootstrap cdn -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/header_styles.css">
+
+<!-- CSS include header -->
+<include href="/views/header.html"></include>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles/login_register_styles.css">
     <title>Workout Tracker Login</title>
 </head>
 <body>
-    <!-- Navbar from /views/header.html -->
-    <include href="/views/header.html" with="Hello"></include>
+    <h1>LOGIN</h1>
 
     <!-- body content -->
     <div id="body-div" class="container row">
@@ -59,15 +53,5 @@
         </div>
     </div>
 
-    <!-- JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-</body>
-</html>
+    <!-- JS include footer -->
+    <include href="/views/footer.html"></include>
